syntax = "proto3";

package common;

message successResponse {
  string code = 1;
  string message = 2;
}

