syntax = "proto3";

package user;

import "google/protobuf/timestamp.proto";

message User {
    string id = 1;
    string firstName = 2;
    string lastName = 3;
    string email = 4;
    string roleId = 5;
    string organizationId = 6; // TODO: this will be convert to organization
    bool isActive = 7;
    google.protobuf.Timestamp createdAt = 8;
    google.protobuf.Timestamp updatedAt = 9;
}

message UserResponse {
    User user = 1;
}

